endpoint for active pomodoro
